feat: add reservation API
