# cmd/reservation-api-service/main.go
@@ -46,10 +46,14 @@ func main() {
     dbServicePatient := db_service.NewMongoService[reservation.Patient](db_service.MongoServiceConfig{
         Collection: "patient",
     })
+    dbServiceReservation := db_service.NewMongoService[reservation.ReservationInput](db_service.MongoServiceConfig{
+        Collection: "reservation",
+    })
     defer dbServiceAmbulance.Disconnect(context.Background())
     engine.Use(func(ctx *gin.Context) {
         ctx.Set("db_service_ambulance", dbServiceAmbulance)
         ctx.Set("db_service_patient", dbServicePatient)
+        ctx.Set("db_service_reservation", dbServiceReservation)
         ctx.Next()
     })
 
